--- a/perfil.html
+++ b/perfil.html
@@ -164,6 +164,7 @@
                         </li>
                         <br class="mobile" /> -->
                     <div class="mobile nave">
+                        <a href="chamada.html" target="_blank" style="background-color: #F44336;color: #fff;" class="btn default anch animated pulse infinite">Aula em andamento</a>
                         <a href="#agenda" class="btn default anch">Agenda</a>
                         <!-- <a href="#meus_professores" class="btn default anch">Professores</a> -->
                         <a href="busca_professor-logado.html" class="btn default">Procurar professor</a>
@@ -172,7 +173,7 @@
                         <a href="#historico_aluno" class="btn default anch">Histórico de aulas</a>
                         <!-- <a href="#" class="btn default anch">Histórico de pagamento</a> -->
                         <a href="#perfil_aluno" class="btn default anch">Meu perfil</a>
-                        <a href="#ajuda_aluno" class="btn default anch">Ajuda</a>
+                        <!-- <a href="#ajuda_aluno" class="btn default anch">Ajuda</a> -->
                     </div>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -202,6 +203,7 @@
                 <div class="col-lg-2 desktop">
                     <div class="menu-lateral">
                         <div class="container-xl">
+                            <a href="chamada.html" target="_blank" style="background-color: #F44336;color: #fff;" class="btn default anch animated pulse infinite">Aula em andamento</a>
                             <a href="#agenda" class="btn default anch">Agenda</a>
                             <!-- <a href="#meus_professores" class="btn default anch">Professores</a> -->
                             <a href="busca_professor-logado.html" class="btn default">Procurar professor</a>
@@ -210,7 +212,7 @@
                             <a href="#perfil_aluno" class="btn default anch">Meu perfil</a>
                             <a href="#pagamento_aluno" class="btn default anch">Pagamento</a>
                             <a href="#meu_carrinho" class="btn default anch">Meu carrinho</a>
-                            <a href="#ajuda_aluno" class="btn default anch">Ajuda</a>
+                            <!-- <a href="#ajuda_aluno" class="btn default anch">Ajuda</a> -->
                         </div>
                     </div>
                 </div>
@@ -226,27 +228,27 @@
                             <div class="chamada cinza">Lista</div>
                             <p class="text-center">Aqui estão suas aulas futuras listadas!</p>
                             <div class="list-group">
-                                <a href="chamada.html" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
+                                <a href="#" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
                                     <div class="d-flex w-100 justify-content-between">
-                                        <h5 class="mb-1">Aula com Professor Fernando, Inglês <span class="badge badge-danger">Aula em andamento</span></h5>
+                                        <h5 class="mb-1">Aula com Professor Fernando, Inglês </h5>
                                         <small>11/07/2020 12h00</small>
                                     </div>
                                 </a>
-                                <a href="#" data-toggle='modal' data-target='#detalhes_aula' class="list-group-item list-group-item-action flex-column align-items-start">
+                                <a href="#" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
                                     <div class="d-flex w-100 justify-content-between">
-                                        <h5 class="mb-1">Aula com Professor Fernando, Inglês <span class="badge badge-success">Pagamento confirmado</span></h5>
+                                        <h5 class="mb-1">Aula com Professor Fernando, Inglês </h5>
                                         <small>11/07/2020 12h00</small>
                                     </div>
                                 </a>
-                                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                                <a href="#" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
                                     <div class="d-flex w-100 justify-content-between">
-                                        <h5 class="mb-1">Aula com Professor Fernando, Inglês <span class="badge badge-primary">Aguardando confirmação</span></h5>
+                                        <h5 class="mb-1">Aula com Professor Fernando, Inglês </h5>
                                         <small>11/07/2020 12h00</small>
                                     </div>
                                 </a>
-                                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target="#aguardando_pgt">
+                                <a href="#" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
                                     <div class="d-flex w-100 justify-content-between">
-                                        <h5 class="mb-1">Aula com Professor Fernando, Inglês <span class="badge badge-warning">Aguardando pagamento</span></h5>
+                                        <h5 class="mb-1">Aula com Professor Fernando, Inglês </h5>
                                         <small>11/07/2020 12h00</small>
                                     </div>
                                 </a>
@@ -414,17 +416,28 @@
                                         <div class="card" style="width: 100%;">
                                             <div class="card-body">
                                                 <div class="row">
+                                                    <div class="col-lg-2">
+                                                        <img class="card-img-top" src="img/p1.png" width="100%" alt="Imagem de capa do card" />
+                                                    </div>
                                                     <div class="col-lg-3">
                                                         <h2 class="text-center mb-0 pt-3">
                                                             Fulano de tal <br />
                                                             <small> Aulas de inglês</small>
                                                         </h2>
+                                                        <p class="text-center">
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star-half text-warning"></i> <br />
+                                                            <a href="#"><small>15 avaliações</small></a>
+                                                        </p>
                                                     </div>
-                                                    <div class="col-lg-4">
+                                                    <div class="col-lg-3">
                                                         <p class="text-center pt-3">Data</p>
                                                         <h3 class="text-center mt-0 mb-0">00/00/0000 00:00</h3>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-2">
                                                         <p class="text-center pt-3">Valor</p>
                                                         <h3 class="text-center mt-0 mb-0"><b>R$</b> 00,00</h3>
                                                     </div>
@@ -443,17 +456,28 @@
                                         <div class="card" style="width: 100%;">
                                             <div class="card-body">
                                                 <div class="row">
+                                                    <div class="col-lg-2">
+                                                        <img class="card-img-top" src="img/p1.png" width="100%" alt="Imagem de capa do card" />
+                                                    </div>
                                                     <div class="col-lg-3">
                                                         <h2 class="text-center mb-0 pt-3">
                                                             Fulano de tal <br />
                                                             <small> Aulas de inglês</small>
                                                         </h2>
+                                                        <p class="text-center">
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star-half text-warning"></i> <br />
+                                                            <a href="#"><small>15 avaliações</small></a>
+                                                        </p>
                                                     </div>
-                                                    <div class="col-lg-4">
+                                                    <div class="col-lg-3">
                                                         <p class="text-center pt-3">Data</p>
                                                         <h3 class="text-center mt-0 mb-0">00/00/0000 00:00</h3>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-2">
                                                         <p class="text-center pt-3">Valor</p>
                                                         <h3 class="text-center mt-0 mb-0"><b>R$</b> 00,00</h3>
                                                     </div>
@@ -472,17 +496,28 @@
                                         <div class="card" style="width: 100%;">
                                             <div class="card-body">
                                                 <div class="row">
+                                                    <div class="col-lg-2">
+                                                        <img class="card-img-top" src="img/p1.png" width="100%" alt="Imagem de capa do card" />
+                                                    </div>
                                                     <div class="col-lg-3">
                                                         <h2 class="text-center mb-0 pt-3">
                                                             Fulano de tal <br />
                                                             <small> Aulas de inglês</small>
                                                         </h2>
+                                                        <p class="text-center">
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star-half text-warning"></i> <br />
+                                                            <a href="#"><small>15 avaliações</small></a>
+                                                        </p>
                                                     </div>
-                                                    <div class="col-lg-4">
+                                                    <div class="col-lg-3">
                                                         <p class="text-center pt-3">Data</p>
                                                         <h3 class="text-center mt-0 mb-0">00/00/0000 00:00</h3>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-2">
                                                         <p class="text-center pt-3">Valor</p>
                                                         <h3 class="text-center mt-0 mb-0"><b>R$</b> 00,00</h3>
                                                     </div>
@@ -496,10 +531,44 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row mt-1">
-                                    <div class="col-12 text-right">
-                                        <h3>Valor total: R$ 00,00</h3>
-                                        <a href="#" class="btn default mx-auto bt-avancar"> Avançar <i class="fas fa-chevron-right"></i></a>
+                                <div class="row mt-3 mb-3">
+                                    <div class="col-lg-12">
+                                        <div class="card" style="width: 100%;">
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-lg-2">
+                                                        <img class="card-img-top" src="img/p1.png" width="100%" alt="Imagem de capa do card" />
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <h2 class="text-center mb-0 pt-3">
+                                                            Fulano de tal <br />
+                                                            <small> Aulas de inglês</small>
+                                                        </h2>
+                                                        <p class="text-center">
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star text-warning"></i>
+                                                            <i class="fas fa-star-half text-warning"></i> <br />
+                                                            <a href="#"><small>15 avaliações</small></a>
+                                                        </p>
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <p class="text-center pt-3">Data</p>
+                                                        <h3 class="text-center mt-0 mb-0">00/00/0000 00:00</h3>
+                                                    </div>
+                                                    <div class="col-lg-2">
+                                                        <p class="text-center pt-3">Valor</p>
+                                                        <h3 class="text-center mt-0 mb-0"><b>R$</b> 00,00</h3>
+                                                    </div>
+                                                    <div class="col-lg-2">
+                                                        <div class="text-center pt-4">
+                                                            <a href="#" class="btn default"><i class="fas fa-trash"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -864,13 +933,25 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="form-group">
-                                                    <select name="" id="" class="form-control">
+                                                    <select name="" id="ajudaAssunto" class="form-control">
                                                         <option selected>Assunto*</option>
-                                                        <option>Dúvida</option>
+                                                        <option value="1">Dúvida</option>
+                                                        <option value="2">Cancelamento</option>
+                                                        <option value="3">Reclamação Urgente</option>
                                                     </select>
                                                     <span class="error error-message"></span>
                                                 </div>
                                             </div>
+                                        </div>
+
+                                        <div class="hide aulas-confirmadas">
+                                            <label for="">Selecione as aulas a serem canceladas</label>
+                                            <select name="" id="aulas-confirmadas" class="form-control">
+                                                 <option value="1">Aula 1</option>
+                                                <option value="2">Aula 2</option>
+                                                <option value="3">Aula 3</option>
+                                            </select>
+                                            <span class="error error-message"></span>
                                         </div>
                                         <div class="form-group">
                                             <textarea name="" placeholder="Mensagem" id="" cols="30" rows="3" class="form-control"></textarea>
